[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/menus/QuitButton.gd" type="Script" id=1]
[ext_resource path="res://src/userinterface/pausescreen.gd" type="Script" id=2]

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 240.0
color = Color( 0, 0, 0, 0.682353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -45.0
margin_top = 7.0
margin_right = 45.0
margin_bottom = 37.0
text = "PAUSED"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DaysRemainingLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -93.0
margin_top = 55.0
margin_right = 93.0
margin_bottom = 77.0
text = "5 Days Remaining"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.5
margin_top = 14.0
margin_right = 78.5
margin_bottom = 76.0
size_flags_horizontal = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="ColorRect/HBoxContainer"]
margin_right = 73.0
margin_bottom = 62.0
size_flags_horizontal = 3
text = "Resume"

[node name="QuitButton" type="Button" parent="ColorRect/HBoxContainer"]
margin_left = 83.0
margin_right = 157.0
margin_bottom = 62.0
size_flags_horizontal = 3
text = "Quit"
script = ExtResource( 1 )
[connection signal="button_up" from="ColorRect/HBoxContainer/ResumeButton" to="." method="_on_ResumeButton_button_up"]
[connection signal="button_up" from="ColorRect/HBoxContainer/QuitButton" to="ColorRect/HBoxContainer/QuitButton" method="_on_button_up"]
